src/App.css
.Header {
  background-color: #BB86FC;
  width: 100%;
}

.Pink {
  background-color: #BB86FC;
}

.Teal {
  background-color: #03DAC6;
}

.ListItem {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100vw;
}

.AddItemInput {
  background-color: white;
}

.AddItem {
  display: flex;
  flex-direction: row;
}

.Result {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.App {
  text-align: center;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100vh;
}

/***********************************************/

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

